{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 77,
  "lineage": "ec331c05-a0bc-c3fa-698a-9a4d277de93b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:network-acl/acl-058aa79c18a149695",
            "default_network_acl_id": "acl-058aa79c18a149695",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-058aa79c18a149695",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "942335579121",
            "region": "us-west-2",
            "subnet_ids": [
              "subnet-016cad163a8519e01",
              "subnet-02d8c45524337ea38",
              "subnet-035db1ecd6742588d",
              "subnet-053d9bd82dafa30f0",
              "subnet-0639d505caece9b01",
              "subnet-0c34fe53d23450a8c"
            ],
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-default",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-default",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:route-table/rtb-0a1f3e2c0841a8f79",
            "default_route_table_id": "rtb-0a1f3e2c0841a8f79",
            "id": "rtb-0a1f3e2c0841a8f79",
            "owner_id": "942335579121",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-default",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-default",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:security-group/sg-0dbafb08bcd245d94",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dbafb08bcd245d94",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "942335579121",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-default",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-default",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a52ffd8c383c1081",
            "arn": "arn:aws:ec2:us-west-2:942335579121:elastic-ip/eipalloc-0a52ffd8c383c1081",
            "association_id": "eipassoc-0430f0a35c3d81356",
            "domain": "vpc",
            "id": "eipalloc-0a52ffd8c383c1081",
            "network_border_group": "us-west-2",
            "network_interface": "eni-051b23f71a62c3169",
            "private_dns": "ip-10-66-1-151.us-west-2.compute.internal",
            "private_ip": "10.66.1.151",
            "public_dns": "ec2-52-38-140-21.us-west-2.compute.amazonaws.com",
            "public_ip": "52.38.140.21",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:internet-gateway/igw-06ff28bfbf3b6d997",
            "id": "igw-06ff28bfbf3b6d997",
            "owner_id": "942335579121",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a52ffd8c383c1081",
            "association_id": "eipassoc-0430f0a35c3d81356",
            "connectivity_type": "public",
            "id": "nat-0a683b3b84f9142c5",
            "network_interface_id": "eni-051b23f71a62c3169",
            "private_ip": "10.66.1.151",
            "public_ip": "52.38.140.21",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035db1ecd6742588d",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bcd85f109cba53b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a683b3b84f9142c5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0bcd85f109cba53b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0bcd85f109cba53b7"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06ff28bfbf3b6d997",
            "id": "r-rtb-0960ef294b4ae668f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0960ef294b4ae668f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0960ef294b4ae668f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:route-table/rtb-0bcd85f109cba53b7",
            "id": "rtb-0bcd85f109cba53b7",
            "owner_id": "942335579121",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a683b3b84f9142c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "rtb-0bcd85f109cba53b7",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:route-table/rtb-0960ef294b4ae668f",
            "id": "rtb-0960ef294b4ae668f",
            "owner_id": "942335579121",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ff28bfbf3b6d997",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "rtb-0960ef294b4ae668f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3f83dedec298e7",
            "region": "us-west-2",
            "route_table_id": "rtb-0bcd85f109cba53b7",
            "subnet_id": "subnet-02d8c45524337ea38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a58a4230a7132a",
            "region": "us-west-2",
            "route_table_id": "rtb-0bcd85f109cba53b7",
            "subnet_id": "subnet-0639d505caece9b01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6f8e1a19e8f3b1c",
            "region": "us-west-2",
            "route_table_id": "rtb-0bcd85f109cba53b7",
            "subnet_id": "subnet-053d9bd82dafa30f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0b3b897ccc7430f",
            "region": "us-west-2",
            "route_table_id": "rtb-0960ef294b4ae668f",
            "subnet_id": "subnet-035db1ecd6742588d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc9fb65e42227752",
            "region": "us-west-2",
            "route_table_id": "rtb-0960ef294b4ae668f",
            "subnet_id": "subnet-0c34fe53d23450a8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00edcb7f59f006a5e",
            "region": "us-west-2",
            "route_table_id": "rtb-0960ef294b4ae668f",
            "subnet_id": "subnet-016cad163a8519e01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:subnet/subnet-02d8c45524337ea38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.66.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d8c45524337ea38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942335579121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "subnet-02d8c45524337ea38",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:subnet/subnet-0639d505caece9b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.66.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0639d505caece9b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942335579121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private-us-west-2b",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private-us-west-2b",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "subnet-0639d505caece9b01",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:subnet/subnet-053d9bd82dafa30f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.66.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053d9bd82dafa30f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942335579121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private-us-west-2c",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-private-us-west-2c",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "subnet-053d9bd82dafa30f0",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:subnet/subnet-035db1ecd6742588d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.66.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035db1ecd6742588d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942335579121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public-us-west-2a",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "subnet-035db1ecd6742588d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:subnet/subnet-0c34fe53d23450a8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.66.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c34fe53d23450a8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942335579121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public-us-west-2b",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public-us-west-2b",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "subnet-0c34fe53d23450a8c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:subnet/subnet-016cad163a8519e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.66.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016cad163a8519e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942335579121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public-us-west-2c",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc-public-us-west-2c",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "vpc_id": "vpc-0f69ad025da97a1f0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "942335579121",
            "id": "subnet-016cad163a8519e01",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942335579121:vpc/vpc-0f69ad025da97a1f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.66.0.0/16",
            "default_network_acl_id": "acl-058aa79c18a149695",
            "default_route_table_id": "rtb-0a1f3e2c0841a8f79",
            "default_security_group_id": "sg-0dbafb08bcd245d94",
            "dhcp_options_id": "dopt-0c9b8498d94657e2b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f69ad025da97a1f0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a1f3e2c0841a8f79",
            "owner_id": "942335579121",
            "region": "us-west-2",
            "tags": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            },
            "tags_all": {
              "CreatedOn": "2025Q3",
              "CreatedVia": "Terraform",
              "Environment": "dev",
              "Name": "istore-vpc",
              "kubernetes.io/cluster/istore-eks-nsqRFzeM": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}